--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #80c5f6 0%, #0c0276 100%);
+    background: linear-gradient(135deg, #80c5f6 0%, #060147 100%);
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -43,15 +43,60 @@ body {
 
 h1 {
     color: #fff;
-    font-size: 28px;
+    font-size: 32px;
     margin-bottom: 10px;
     font-weight: 600;
+}
+
+h2 {
+    color: #282552;
+    font-size: 16px;
+    font-weight: 400;
+    font: "Fira Sans", sans-serif;
 }
 
 .bio {
     color: rgba(255, 255, 255, 0.9);
     font-size: 16px;
-    margin-bottom: 40px;
+    margin-bottom: 24px;
+}
+
+.social-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 24px;
+}
+
+.social-images {
+    width: 50px;
+    height: 50px;
+    /* background: rgba(255, 255, 255, 0.95); */
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    mix-blend-mode: screen;
+    isolation: isolate;
+    filter: brightness(1.8);
+    transition: all 0.3s ease;
+}
+
+.social-images img {
+    width: 30px;
+    height: 30px;
+}
+
+.social-images:hover {
+    transform: translateY(-3px) scale(1.1);
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+    /* background: #fff; */
+}
+
+.social-images:active {
+    transform: translateY(-1px) scale(1.05);
 }
 
 .links {
@@ -61,11 +106,11 @@ h1 {
 }
 
 .link-button {
-    background: rgba(255, 255, 255, 0.95);
+    background: rgba(227, 227, 227, 0.95);
     color: #333;
     text-decoration: none;
     padding: 18px 30px;
-    border-radius: 12px;
+    border-radius: 150px;
     font-size: 16px;
     font-weight: 500;
     transition: all 0.3s ease;
